--- a/visualization-widgets/SearchResultListVis/js/lib/resultList.css
+++ b/visualization-widgets/SearchResultListVis/js/lib/resultList.css
@@ -435,17 +435,32 @@ div.eexcess-title-other-with-preview-area.eexcess-unknown {
     color: white;
 }
 
-.eexcess-result-link {
-    color: black;
-    text-decoration: none;
+/* result links */
+ul.eexcess-result-links {
+    display: none;
+    list-style-type: none;
     position: absolute;
-    right: 2px;
-    bottom: 3px;
-    opacity: 0;
+    right: 0;
+    bottom: -12px;
+    padding: 0;
 }
 
-.eexcess-cite-link {
-    bottom: 20px;
+.eexcess-isotope-grid-item:hover > .eexcess-result-links {
+    display: block;
+}
+
+ul.eexcess-result-links > li {
+    padding: 3px;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+ul.eexcess-result-links > li:hover {
+    background-color: rgba(255, 255, 255, 0.9);
+}
+
+ul.eexcess-result-links > li > a {
+    color: black;
+    text-decoration: none;
 }
 
 .eexcess-result-link-lightbox {
