Item insert links moved to top to avoid overlapping of description/item. And citation inserting fixed.

--- a/visualization-widgets/SearchResultListVis/js/lib/resultList.css
+++ b/visualization-widgets/SearchResultListVis/js/lib/resultList.css
@@ -441,10 +441,8 @@ ul.eexcess-result-links {
     list-style-type: none;
     position: absolute;
     right: 0;
-    top: -12px;
+    top: -8px;
     padding: 0;
-    border: 1px solid #000;
-    border-radius: 5px;
 }
 
 .eexcess-isotope-grid-item:hover > .eexcess-result-links {
@@ -452,19 +450,22 @@ ul.eexcess-result-links {
 }
 
 ul.eexcess-result-links > li {
+    cursor: pointer;
+    display: inline;
     padding: 5px;
     background-color: #FFFFFF;
-    border-top: 1px solid #000;
+    border: 1px solid #000;
+    border-left: none;
 }
 
 ul.eexcess-result-links > li:first-child {
-    border-top: none;
+    border-left: 1px solid #000;
     border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 
 ul.eexcess-result-links > li:last-child {
-    border-bottom-left-radius: 5px;
+    border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
 }
 
@@ -483,7 +484,6 @@ ul.eexcess-result-links > li > a {
     position: absolute;
     right: 2px;
     bottom: 3px;
-
 }
 
 /*lightbox*/
