--- a/visualization-widgets/SearchResultListVis/js/lib/resultList.css
+++ b/visualization-widgets/SearchResultListVis/js/lib/resultList.css
@@ -56,6 +56,7 @@ unknown, eecxess green: #1d904e*/
     height: 60px;
     border: 2px solid white;
     background: #0D8;
+    cursor: pointer;
 }
 
 .eexcess-isotope-grid-item.eexcess-text {
