loading spinner during preview popup loading added

--- a/visualization-widgets/SearchResultListVis/js/lib/resultList.css
+++ b/visualization-widgets/SearchResultListVis/js/lib/resultList.css
@@ -1,3 +1,24 @@
+.result-item-loading-spinner {
+    position: absolute;
+    z-index: 999;
+    height: 100%;
+    width: 100%;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0,0,0,0.3);
+}
+
+.result-item-loading-spinner > span {
+    position: relative;
+    text-align: center;
+    width: 100%;
+    color: white;
+    top: 15%;
+}
+
 .filter-btn-group > button {
     height: 24px;
     width: 24px;
